# FEM-program-win

./: .clang-format  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  compile_commands.json
.cache/clangd/index/: PlateMaterial.cpp.5603E29516C62E79.idx  PlateMaterial.cpp.93CD304DBF0225B1.idx  PlateMaterial.h.38DBADDB1591BD71.idx  PlateMaterial.h.76212F9D77910B48.idx  displacement.cpp.1B38F3C7CEFFC136.idx  displacement.cpp.BA8DB86D529375DD.idx  displacement.cpp.F928CB77586B6FBD.idx  displacement.h.89BFCB472202FC8D.idx  displacement.h.9B316A2FD1DC235A.idx  displacement.h.B6A786D2EEE4F8F8.idx  displacement.h.BE2818F7D465F8E3.idx  element.cpp.5AD6FC463AF9A943.idx  element.cpp.ABCD762311B77D46.idx  element.h.1DEFB773A3AAFAC7.idx  element.h.97A8DC53B73BA0C1.idx  element.h.CC844CEE15D864D3.idx  element_provider.cpp.58BE4FD486D61F1A.idx  element_provider.h.786BFB312BF57177.idx  elementprovider.cpp.7F7CA16844D2467A.idx  elementprovider.cpp.E88267E03B906254.idx  elementprovider.h.6DD12993517A32F4.idx  elementprovider.h.FC1A113800D38A1D.idx  fem_displacement.cpp.082F71E109121C08.idx  fem_displacement.h.FAC91261B2E4952B.idx  fem_element.cpp.83B0C4C84E4E40A3.idx  fem_element.h.5AE5DB8CF30B8CC3.idx  fem_load.cpp.56A3358EF1A9CD9A.idx  fem_load.h.FB95D845F1F8C0C2.idx  fem_plate_dkmq.cpp.806D35589644F336.idx  fem_plate_dkmq.cpp.B47D32094DD18E43.idx  fem_plate_dkmq.h.087D26C67E05938B.idx  fem_plate_dkmq.h.25BBB71F202FA650.idx  fem_plate_mitc4my.cpp.90340730B04255D1.idx  fem_plate_mitc4my.cpp.BEABF326686C535C.idx  fem_plate_mitc4my.h.241475D2A980F91B.idx  fem_plate_mitc4my.h.FDD8254BA76795D3.idx  fem_plate_mitc9my.cpp.1E2CD86B9CB65A0B.idx  fem_plate_mitc9my.cpp.DC1FD68F0CB4F672.idx  fem_plate_mitc9my.h.0D31239205A9A465.idx  fem_plate_mitc9my.h.3B85F1AD7649A44C.idx  (+63 more)
src/app/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h  mainwindow.cpp  mainwindow.h
src/app/context-menu/: treeContextMenu.cpp  treeContextMenu.h
src/app/context_menu/: tree_context_menu.cpp  tree_context_menu.h
src/elements/: elementprovider.cpp  elementprovider.h  femelement.cpp  femelement.h  femtypes.h  node.h  point.h
src/elements/displacement/: femdisplacement.cpp  femdisplacement.h
src/elements/fem_plates/: fem_plate_dkmq.cpp  fem_plate_dkmq.h  fem_plate_mitc4my.cpp  fem_plate_mitc4my.h  fem_plate_mitc9my.cpp  fem_plate_mitc9my.h
src/elements/load/: femload.cpp  femload.h
src/elements/material/: PlateMaterial.cpp  PlateMaterial.h  material.h
src/elements/plates/: plates.cpp  plates.h
src/fem_elements/: element_provider.cpp  element_provider.h  fem_element.cpp  fem_element.h  fem_types.h  global.h  node.h  point.h  to_add_new_fem_element.md
src/fem_elements/displacement/: fem_displacement.cpp  fem_displacement.h
src/fem_elements/fem_plates/: fem_plate_dkmq.cpp  fem_plate_dkmq.h  fem_plate_mitc4my.cpp  fem_plate_mitc4my.h  fem_plate_mitc9my.cpp  fem_plate_mitc9my.h
src/fem_elements/load/: fem_load.cpp  fem_load.h
src/fem_elements/material/: material.h  plate_Material.cpp  plate_material.h
src/generalElement/: element.cpp  element.h
src/generalElement/displacement/: displacement.cpp  displacement.h
src/generalElement/load/: load.cpp  load.h
src/generalElement/plates/: plate.cpp  plate.h
src/general_element/: element.cpp  element.h
src/general_element/load/: load.cpp  load.h
src/general_element/plates/: plate.cpp  plate.h
src/graphics/qtgl/: qtgl.cpp  qtgl.h
src/mesh/: mesh.cpp  mesh.h  meshdata.cpp  meshdata.h
src/solver/: solver.cpp  solver.h
src/structural_element/: structural_element.cpp  structural_element.h
src/structural_element/structural_displacement/: displacement.h
src/structural_element/structural_load/: load.cpp  load.h
src/structural_element/structural_plates/: plate.cpp  plate.h
